Feito a tela de admin

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -122,27 +122,36 @@
             <div class="Contate">
                 <div class="orcamento">
                     <!-- <button href="../paginas/orcamento.html">Faça um orçamento</button> -->
-                     <a href="../paginas/orcamento.html">Faça um orçamento</a>
+                     <a href="../paginas/telaAdm.html">Faça um orçamento</a>
                 </div>
             </div>
     </div>
     <div class="Footer">
-        <div class="infoPessoal">
-            <h1 class="tituloDuvidas">Fale conosco</h1>
-            <h2>(19) 99999-9999</h2>
-            <a href="mailto:onakagabriela@gmail.com?subject=Assunto do email&cc=aprigiomatheus24@gmail.com">onakagabriela@gmail.com</a>
-        </div>
-        <div class="Pagamento">
-            <h1 class="tituloPay">Formas de pagamento: </h1>
-            <h2>Débito</h2>
-            <h2>Crédito</h2>
-            <h2>Pix</h2>
-        </div>
-        <div class="Midia">
-          <img src="../imagens/IconFace.png" alt="">
-          <img src="../imagens/IconInsta.png" alt="">
-          <img src="../imagens/IconWhats.png" alt="">
-        </div>
+      <div class="Pagamento">
+        <h1 class="tituloPay">Formas de pagamento: </h1>
+        <h2>Pix</h2>
+        <h2>Dinheiro</h2>
+        <h2>Débito e Crédito</h2>
+      </div>
+
+    <div class="infoPessoal">
+      <h1 class="tituloDuvidas">Contatos</h1>
+      <h2>Telefone: (19)3305-5499</h2>
+      <h2>Whatsapp: (19)98360-6566</h2>
+      <a href="mailto:contato@mzgraf.com.br?subject=">contato@mzgraf.com.br</a>
+    </div>
+
+    <div class="endereco">
+      <h1 class="tituloEndereco">Onde nos encontrar:</h1>
+      <h2>Av. Suaçuna, 299</h2>
+      <h2>Vila Aeroporto</h2>
+      <h2>Campinas/SP</h2>
+    </div>
+  </div>
+    <div class="Midia">
+      <img src="../imagens/IconFace.png" class="Face" alt="">
+      <img src="../imagens/IconInsta.png" class="Insta" alt="">
+      <img src="../imagens/IconWhats.png" class="Whats" alt="">
     </div>
 
     <!-- JS do carrossel -->
