--- a/paginas/telaAdm.html
+++ b/paginas/telaAdm.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administrador</title>
+    <link rel="stylesheet" href="../styles/telaAdm.css">
 </head>
 <body>
-    
+<nav class="navbarAdm">
+    <div class="logoAdm">
+        <img src="../imagens/LogoBrancoVermelho.png" alt="">
+    </div>
+    <div class="contaAdmin">
+        <div class="logoUser">
+            <img src="../imagens/user.png" alt="">
+        </div>
+        <div class="Admin">
+            <h1>Administrador</h1>
+        </div>
+    </div>
+</nav>
+
+<div class="container">
+    <div class="botoes">
+        <div class="btnServicos">
+            <a href="../paginas/orcamento.html">ORDEM DE SERVIÇO</a>
+            <!-- <h1>ORDEM DE SERVIÇO</h1> -->
+            <a href="../paginas/orcamento.html"><img src="../imagens/paper (1) 1.png" alt=""></a>
+        </div>
+        <div class="btnEstoque">
+
+            <a href="../paginas/orcamento.html">Estoque</a>
+            <!-- <h1>ESTOQUE</h1> -->
+            <a href="../paginas/orcamento.html"><img src="../imagens/box (1) 1.png" alt=""></a>
+        </div>
+    </div>
+</div>
+        
 </body>
 </html>
