--- a/paginas/orcamento.html
+++ b/paginas/orcamento.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orçamento</title>
-
-    <link rel="stylesheet" href="../styles/orcamento.css">
+    <title>Document</title>
 </head>
 <body>
     
