--- a/paginas/index.html
+++ b/paginas/index.html
@@ -122,7 +122,7 @@
             <div class="Contate">
                 <div class="orcamento">
                     <!-- <button href="../paginas/orcamento.html">Faça um orçamento</button> -->
-                     <a href="../paginas/telaAdm.html">Faça um orçamento</a>
+                     <a href="../paginas/orcamento.html">Faça um orçamento</a>
                 </div>
             </div>
     </div>
