tela de ordem de serviço

--- a/paginas/telaAdm.html
+++ b/paginas/telaAdm.html
@@ -26,9 +26,9 @@
 <div class="container">
     <div class="botoes">
         <div class="btnServicos">
-            <a href="../paginas/newOS.html">ORDEM DE SERVIÇO</a>
+            <a href="../paginas/ordemServControle.html">ORDEM DE SERVIÇO</a>
             <!-- <h1>ORDEM DE SERVIÇO</h1> -->
-            <a href="../paginas/newOS.html"><img src="../imagens/paper (1) 1.png" alt=""></a>
+            <a href="../paginas/ordemServControle.html"><img src="../imagens/paper (1) 1.png" alt=""></a>
         </div>
         <div class="btnEstoque">
 
