--- a/paginas/telaAdm.html
+++ b/paginas/telaAdm.html
@@ -9,7 +9,9 @@
 <body>
 <nav class="navbarAdm">
     <div class="logoAdm">
-        <img src="../imagens/LogoBrancoVermelho.png" alt="">
+        <a href="">
+            <img src="../imagens/LogoBrancoVermelho.png" alt="Logo">
+        </a>
     </div>
     <div class="contaAdmin">
         <div class="logoUser">
@@ -24,15 +26,15 @@
 <div class="container">
     <div class="botoes">
         <div class="btnServicos">
-            <a href="../paginas/orcamento.html">ORDEM DE SERVIÇO</a>
+            <a href="../paginas/newOS.html">ORDEM DE SERVIÇO</a>
             <!-- <h1>ORDEM DE SERVIÇO</h1> -->
-            <a href="../paginas/orcamento.html"><img src="../imagens/paper (1) 1.png" alt=""></a>
+            <a href="../paginas/newOS.html"><img src="../imagens/paper (1) 1.png" alt=""></a>
         </div>
         <div class="btnEstoque">
 
-            <a href="../paginas/orcamento.html">Estoque</a>
+            <a href="../paginas/estoque.html">Estoque</a>
             <!-- <h1>ESTOQUE</h1> -->
-            <a href="../paginas/orcamento.html"><img src="../imagens/box (1) 1.png" alt=""></a>
+            <a href="../paginas/estoque.html"><img src="../imagens/box (1) 1.png" alt=""></a>
         </div>
     </div>
 </div>
