--- a/paginas/ordemServico.html
+++ b/paginas/ordemServico.html
@@ -36,12 +36,13 @@
 
     <!-- Main Container -->
     <div class="container">
-        <h1>Manipulação de controle de estoque de produtos</h1>
+        <h1>Controle - Ordens de Serviço</h1>
 
         <div class="controls">
-            <button id="btnAdicionar">INCLUIR PRODUTO</button>
-            <button id="btnRemoverSelecionado">REMOVER SELECIONADO</button>
-            <button id="btnEditarProduto" onclick="openEditModal()" class="disabled" disabled>EDITAR PRODUTO</button>
+            <button id="btnAdicionar">INCLUIR OS</button>
+            <button id="btnRemoverSelecionado">REMOVER OS</button>
+            <button id="btnRemoverSelecionado">ATUALIZAR OS</button>
+            <button id="btnEditarProduto" onclick="openEditModal()" class="disabled" disabled>EDITAR OS</button>
 
             <!-- <input type="text" placeholder="Digite para pesquisar"> -->
             <!-- <span>Exibir</span> -->
